{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 44,
  "lineage": "d874b452-6170-3f3c-d65b-49bc4d8cd526",
  "resources": [
    {
      "module": "module.assoc-subnet-pub1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a484e15a2287e689",
            "route_table_id": "rtb-0d40cc553138a7715",
            "subnet_id": "subnet-025caa9c6b1f38e64"
          },
          "dependencies": [
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_internet_gateway.igw",
            "module.vpc-test.aws_route_table.main-route-table",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.assoc-subnet-pub2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d6f240cfed2c663",
            "route_table_id": "rtb-0d40cc553138a7715",
            "subnet_id": "subnet-0a44383fbe35b3cdd"
          },
          "dependencies": [
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_internet_gateway.igw",
            "module.vpc-test.aws_route_table.main-route-table",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.attach-priv1-ec2-to-privtg",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3-20230523132632993400000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3",
            "target_id": "i-07326b43039a76316"
          },
          "dependencies": [
            "module.priv1-ec2.aws_instance.ec2",
            "module.private-tg.aws_lb_target_group.target-group",
            "module.pub1-ec2.aws_instance.ec2",
            "module.security-group-priv1-ec2.aws_security_group.for-ec2-and-lb",
            "module.security-group-pub1-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-priv1.aws_subnet.subnet",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.attach-priv2-ec2-to-privtg",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3-20230523132646771100000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3",
            "target_id": "i-04ddbc94ab381cbe9"
          },
          "dependencies": [
            "module.priv2-ec2.aws_instance.ec2",
            "module.private-tg.aws_lb_target_group.target-group",
            "module.pub2-ec2.aws_instance.ec2",
            "module.security-group-priv2-ec2.aws_security_group.for-ec2-and-lb",
            "module.security-group-pub2-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-priv2.aws_subnet.subnet",
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.attach-pub1-ec2-to-pubtg",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11-20230523132557064300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11",
            "target_id": "i-0754ceb5b3e1d2bc8"
          },
          "dependencies": [
            "module.pub1-ec2.aws_instance.ec2",
            "module.public-tg.aws_lb_target_group.target-group",
            "module.security-group-pub1-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.attach-pub2-ec2-to-pubtg",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11-20230523132600802000000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11",
            "target_id": "i-0be93785fe6c04327"
          },
          "dependencies": [
            "module.pub2-ec2.aws_instance.ec2",
            "module.public-tg.aws_lb_target_group.target-group",
            "module.security-group-pub2-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-priv-route-table",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026a4d4f4a50c1c8a",
            "association_id": "eipassoc-062c2a03d795c8368",
            "domain": "vpc",
            "id": "eipalloc-026a4d4f4a50c1c8a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e96e787e1309fb6",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-54-174-255-201.compute-1.amazonaws.com",
            "public_ip": "54.174.255.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-priv-route-table",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026a4d4f4a50c1c8a",
            "association_id": "eipassoc-062c2a03d795c8368",
            "connectivity_type": "public",
            "id": "nat-046b7234d65f17c47",
            "network_interface_id": "eni-01e96e787e1309fb6",
            "private_ip": "10.0.1.204",
            "public_ip": "54.174.255.201",
            "subnet_id": "subnet-0006f9074a3308a98"
          },
          "dependencies": [
            "module.nat-priv-route-table.aws_eip.main",
            "module.subnet-priv1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-priv-route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:route-table/rtb-0017551c763019fc1",
            "id": "rtb-0017551c763019fc1",
            "owner_id": "712922297422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046b7234d65f17c47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-routetable"
            },
            "tags_all": {
              "Name": "private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat-priv-route-table.aws_eip.main",
            "module.nat-priv-route-table.aws_nat_gateway.main",
            "module.subnet-priv1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priv1-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:712922297422:instance/i-07326b43039a76316",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07326b43039a76316",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a35e4de5e316b19",
            "private_dns": "ip-10-0-1-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1d7a6d20ca9e349",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0006f9074a3308a98",
            "tags": {
              "Name": "priv1-ec22"
            },
            "tags_all": {
              "Name": "priv1-ec22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00126452b95839a46"
            ]
          },
          "dependencies": [
            "module.pub1-ec2.aws_instance.ec2",
            "module.security-group-priv1-ec2.aws_security_group.for-ec2-and-lb",
            "module.security-group-pub1-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-priv1.aws_subnet.subnet",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.priv2-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:712922297422:instance/i-04ddbc94ab381cbe9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ddbc94ab381cbe9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c2772b8657a62c2",
            "private_dns": "ip-10-0-3-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e265fda55a8336e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d68321d02aa5888a",
            "tags": {
              "Name": "priv2-ec22"
            },
            "tags_all": {
              "Name": "priv2-ec22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0757687a7c39f00f6"
            ]
          },
          "dependencies": [
            "module.pub2-ec2.aws_instance.ec2",
            "module.security-group-priv2-ec2.aws_security_group.for-ec2-and-lb",
            "module.security-group-pub2-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-priv2.aws_subnet.subnet",
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:loadbalancer/app/private-load-balancer/ce4f5b3e3beb3cdf",
            "arn_suffix": "app/private-load-balancer/ce4f5b3e3beb3cdf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-load-balancer-563074611.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:loadbalancer/app/private-load-balancer/ce4f5b3e3beb3cdf",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08bef94ad92d2a290"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0006f9074a3308a98"
              },
              {
                "subnet_id": "subnet-0d68321d02aa5888a"
              }
            ],
            "subnets": [
              "subnet-0006f9074a3308a98",
              "subnet-0d68321d02aa5888a"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-00551a21407cf871d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security-group-private-lb.aws_security_group.for-ec2-and-lb",
            "module.subnet-priv1.aws_subnet.subnet",
            "module.subnet-priv2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:listener/app/private-load-balancer/ce4f5b3e3beb3cdf/9f7f52661c37dcd4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:listener/app/private-load-balancer/ce4f5b3e3beb3cdf/9f7f52661c37dcd4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:loadbalancer/app/private-load-balancer/ce4f5b3e3beb3cdf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private-lb.aws_lb.lb",
            "module.private-tg.aws_lb_target_group.target-group",
            "module.security-group-private-lb.aws_security_group.for-ec2-and-lb",
            "module.subnet-priv1.aws_subnet.subnet",
            "module.subnet-priv2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3",
            "arn_suffix": "targetgroup/private-target-group/cb622b28f14aa8d3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/private-target-group/cb622b28f14aa8d3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub1-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:712922297422:instance/i-0754ceb5b3e1d2bc8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0754ceb5b3e1d2bc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0640f71bd3d197508",
            "private_dns": "ip-10-0-0-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.26",
            "public_ip": "18.207.128.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a048198b32fd2879",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025caa9c6b1f38e64",
            "tags": {
              "Name": "pub1-ec22"
            },
            "tags_all": {
              "Name": "pub1-ec22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026d215c0bf940de3"
            ]
          },
          "dependencies": [
            "module.security-group-pub1-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub2-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:712922297422:instance/i-0be93785fe6c04327",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be93785fe6c04327",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01bbee8b934de23de",
            "private_dns": "ip-10-0-2-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.21",
            "public_ip": "3.86.66.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073eb4a1de9db367a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a44383fbe35b3cdd",
            "tags": {
              "Name": "pub2-ec22"
            },
            "tags_all": {
              "Name": "pub2-ec22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06279a2069198191a"
            ]
          },
          "dependencies": [
            "module.security-group-pub2-ec2.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:loadbalancer/app/public-load-balancer/b48b89ed47be060f",
            "arn_suffix": "app/public-load-balancer/b48b89ed47be060f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-load-balancer-1542294179.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:loadbalancer/app/public-load-balancer/b48b89ed47be060f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07530bd6acc418a21"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025caa9c6b1f38e64"
              },
              {
                "subnet_id": "subnet-0a44383fbe35b3cdd"
              }
            ],
            "subnets": [
              "subnet-025caa9c6b1f38e64",
              "subnet-0a44383fbe35b3cdd"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-00551a21407cf871d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security-group-public-lb.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:listener/app/public-load-balancer/b48b89ed47be060f/84d93055f6c730d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:listener/app/public-load-balancer/b48b89ed47be060f/84d93055f6c730d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:loadbalancer/app/public-load-balancer/b48b89ed47be060f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public-lb.aws_lb.lb",
            "module.public-tg.aws_lb_target_group.target-group",
            "module.security-group-public-lb.aws_security_group.for-ec2-and-lb",
            "module.subnet-pub1.aws_subnet.subnet",
            "module.subnet-pub2.aws_subnet.subnet",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11",
            "arn_suffix": "targetgroup/public-target-group/1e3c444716d02d11",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:712922297422:targetgroup/public-target-group/1e3c444716d02d11",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-priv1-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-00126452b95839a46",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00126452b95839a46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "priv1-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-priv2-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-0757687a7c39f00f6",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0757687a7c39f00f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "priv2-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-private-lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-08bef94ad92d2a290",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bef94ad92d2a290",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private-lb-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-pub1-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-026d215c0bf940de3",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026d215c0bf940de3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pub1-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-pub2-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-06279a2069198191a",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06279a2069198191a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pub2-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group-public-lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "for-ec2-and-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:security-group/sg-07530bd6acc418a21",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07530bd6acc418a21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "public-lb-sec-group",
            "name_prefix": "",
            "owner_id": "712922297422",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:subnet/subnet-0006f9074a3308a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006f9074a3308a98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712922297422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:subnet/subnet-0d68321d02aa5888a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68321d02aa5888a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712922297422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet2"
            },
            "tags_all": {
              "Name": "private-subnet2"
            },
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:subnet/subnet-025caa9c6b1f38e64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025caa9c6b1f38e64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712922297422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet1"
            },
            "tags_all": {
              "Name": "public-subnet1"
            },
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:subnet/subnet-0a44383fbe35b3cdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a44383fbe35b3cdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712922297422",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet2"
            },
            "tags_all": {
              "Name": "public-subnet2"
            },
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc-test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:internet-gateway/igw-0e0ba89747df200f9",
            "id": "igw-0e0ba89747df200f9",
            "owner_id": "712922297422",
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-route-table",
      "provider": "module.vpc-test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:route-table/rtb-0d40cc553138a7715",
            "id": "rtb-0d40cc553138a7715",
            "owner_id": "712922297422",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0ba89747df200f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_routetable"
            },
            "tags_all": {
              "Name": "public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00551a21407cf871d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.igw",
            "module.vpc-test.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc-test.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712922297422:vpc/vpc-00551a21407cf871d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077717a13534ab2fa",
            "default_route_table_id": "rtb-0a13532d432067e82",
            "default_security_group_id": "sg-03380d554a8872662",
            "dhcp_options_id": "dopt-04797476f01fbf3fd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00551a21407cf871d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a13532d432067e82",
            "owner_id": "712922297422"
          }
        }
      ]
    }
  ]
}